fix default page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </header>
 
-        <main class="completed">
+        <main>
             <h1>
                 Card Details
             </h1>
